Closed Bug 322546 Opened 20 years ago Closed 19 years ago

GOK UI-Grab window doesn't refresh when switching tabs

Categories

(Firefox :: Disability Access, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: evan.yan, Assigned: evan.yan)

References

Details

(Keywords: access, fixed1.8.1)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060103 Firefox/1.6a1 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060103 Firefox/1.6a1 when switching tabs, GOK UI-Grab window shows old contents. Reproducible: Always Steps to Reproduce: 1. click menu->Edit->Preference, open the Preference window, then select "Privacy"; 2. click UI-Grab in GOK; 3. switching tabs of "Privacy" in Preference window, GOK UI-Grab window can't refresh to show the controls of current tab. Actual Results: GOK UI-Grab window can't refresh. Expected Results: GOK refresh to show the current tab. this bug exists in not only preference window, but also tab browsering.
Attached patch patchSplinter Review
fire REORDER event when select tabpanels to make GOK UI-Grab refresh.
Attachment #207699 - Flags: review?(aaronleventhal)
Assignee: nobody → Evan.Yan
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 207699 [details] [diff] [review] patch This is firing a reorder event no matter what the real event is -- it's only basing the decision on where the event occured. That's clearly not right! :) Also, if we fire event reorder it probably means the Mozilla accessibility cache needs to be invalidated at that point. I'm curious to know if InvalidateCacheSubtree is being called already. Ah, it looks like we handle this for MSAA here: http://lxr.mozilla.org/seamonkey/source/accessible/src/msaa/nsDocAccessibleWrap.cpp#420 Probably the ATK or base version of that method should contain that code.
Attachment #207699 - Flags: review?(aaronleventhal) → review-
(In reply to comment #2) > (From update of attachment 207699 [details] [diff] [review] [edit]) > This is firing a reorder event no matter what the real event is -- it's only > basing the decision on where the event occured. That's clearly not right! :) > The patch is firing a reorder event when "select" "tabpanals". Not only basing "tabpanals".
Trunk Current behavior on Linux: 1) For Pref dialog The image button "General" "Privacy" "Content" "Tabs" ... are not grabbed (another bug) Switching between them, GOK refreshed only for the first time load. i.e. Click "General", Click "Privacy", GOK refreshed, Click "General" again, GOK not refreshed, Click "Privacy" again, GOK not refreshed, Click "Content" for the first time, GOK refreshed 2) For tabs in Privacy pref setting dialog GOK can refresh, if you click the button of the tab header twice in GOK. So there're another problem, the UI grabbed in GOK is not sync with the display, if you click the button one by one. Click "History", then click "Saved Forms", then click "Passwords", GOK will refresh, but it grabs the "Saved Forms" tab instead of "Passwords". Click "Passwords" again, it will sync. 3) For tab browsing Similar with 2), GOK only refreshes after you clicks same tab for 2 or 3 times. On Windows, I set breakpoints for everywhere sends REORDER event. Sometimes AccEvent received REORDER event for Firefox window, but it doesn't break.
Blocks: fox2access
Keywords: access
Comment on attachment 207699 [details] [diff] [review] patch My mistake, I did not read the code correctly the first time.
Attachment #207699 - Flags: review- → review+
Attachment #207699 - Flags: superreview?(roc)
Attachment #207699 - Flags: superreview?(roc) → superreview+
Checking in nsRootAccessible.cpp; /cvsroot/mozilla/accessible/src/base/nsRootAccessible.cpp,v <-- nsRootAccessible.cpp new revision: 1.146; previous revision: 1.145 done
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Attachment #207699 - Flags: approval-branch-1.8.1?(aaronleventhal)
Attachment #207699 - Flags: approval-branch-1.8.1?(aaronleventhal) → approval-branch-1.8.1+
Checking in nsRootAccessible.cpp; /cvsroot/mozilla/accessible/src/base/nsRootAccessible.cpp,v <-- nsRootAccessible.cpp new revision: 1.130.2.10; previous revision: 1.130.2.9 done
Keywords: fixed1.8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: