Bug 322546 GOK UI-Grab window doesn't refresh when switching tabs patch by evan.yan at sun.com r=aaronleventhal sr=roc